update wifi state and led indication. encapsulation of unavailable eth

--- a/data/index.html
+++ b/data/index.html
@@ -72,7 +72,7 @@
             padding: 5px
         }
         .ethernet {
-            display: '{{eth_display}}';
+            display: {{eth_display}};
         }
     </style>
     <title>Remote Two - KoeBlaster</title>
